fix spacing between version and icon

--- a/web/public/main.css
+++ b/web/public/main.css
@@ -287,7 +287,7 @@ span.error {
 .build-step .header .version {
   float: right;
   margin: 0;
-  padding-left: 6px;
+  padding: 0 6px;
   line-height: 28px;
 }
 
